<resources>
    <string name="app_name">Otter Half</string>
    <string name="welcome_txt">Welcome to Better Half!</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="action_connect">Connect</string>
    <string name="action_share">Share</string>
    <string name="action_home">Home</string>

    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_single_item_edit">SingleItemEditActivity</string>

    <!--Error messages-->
    <string name="invalid_email">Invalid email address</string>
    <string name="invalid_password">Invalid password</string>

    <!--strings for HomeActivity-->
    <string name="entertainment_button">Entertainment</string>
    <string name="fashion_button">Fashion</string>
    <string name="food_button">Food</string>
    <string name="hobby_button">Hobby</string>
    <string name="medical_button">Medical</string>

    <!--strings for LoginActivity-->
    <string name="email_prompt">Email:</string>
    <string name="password_prompt">Password:</string>
    <string name="username_prompt">Username:</string>
    <string name="login_txt">Login</string>
    <string name="newuser_txt">New user?</string>
    <string name="signup_txt">Sign Up</string>
    <string name="existing_txt">Already have an account?</string>
    <string name="forgot_pwd_txt">Forgot Password?</string>

    <!--strings for DataItemActivity-->
    <string name="add_item_txt">Add New Item</string>
    <string name="item_name_prompt">Item Name:</string>
    <string name="item_value_prompt">Item Value:</string>

    <!--strings for SettingsActivity-->
    <string name="delete_account_button">Delete Account</string>
    <string name="save_account_button">Save Changes</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name</string>
    <string name="signed_in_as">Signed in as </string>
    <string name="connected_with">Connected with </string>

    <!--strings for ConnectionActivity-->
    <string name="title_activity_connection">Connecting Accounts</string>
    <string name="connect_with_txt">Please enter the username of the user you would like to link accounts with:</string>
    <string name="connect_input_txt">Username:</string>
    <string name="connect_button">Connect</string>
    <string name="disconnect_txt"></string>
    <string name="disconnect_button">Disconnect</string>

    <!--strings for SingleItemEditActivity-->
    <string name="save_button">Save</string>

    <!--strings for Sorting -->
    <string name="action_sort">Sort</string>
    <string name="action_sort_val">Sort by name</string>
    <string name="action_sort_cat">Sort by type</string>
    <string name="action_sort_fav">Sort by favorite</string>

    <string name="dialog_delete_item">Would you like to delete or edit this item?</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="title_activity_data_item">DataItemActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>

</resources>
